; ModuleID = '/home/carl/AnghaBench/timescaledb/src/extr_chunk_index.c_ts_chunk_index_create_from_adjusted_index_info.c'
source_filename = "/home/carl/AnghaBench/timescaledb/src/extr_chunk_index.c_ts_chunk_index_create_from_adjusted_index_info.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @ts_chunk_index_create_from_adjusted_index_info(i32 %0, i32 %1, i32 %2, i32 %3, i32* %4) #0 {
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32*, align 8
  %11 = alloca i32, align 4
  store i32 %0, i32* %6, align 4
  store i32 %1, i32* %7, align 4
  store i32 %2, i32* %8, align 4
  store i32 %3, i32* %9, align 4
  store i32* %4, i32** %10, align 8
  %12 = load i32, i32* %6, align 4
  %13 = load i32, i32* %7, align 4
  %14 = load i32, i32* %9, align 4
  %15 = load i32*, i32** %10, align 8
  %16 = call i32 @ts_chunk_index_create_post_adjustment(i32 %12, i32 %13, i32 %14, i32* %15, i32 0, i32 0)
  store i32 %16, i32* %11, align 4
  %17 = load i32, i32* %8, align 4
  %18 = load i32, i32* %11, align 4
  %19 = call i32 @get_rel_name(i32 %18)
  %20 = load i32, i32* %6, align 4
  %21 = load i32, i32* %7, align 4
  %22 = call i32 @RelationGetRelid(i32 %21)
  %23 = call i32 @get_rel_name(i32 %22)
  %24 = call i32 @chunk_index_insert(i32 %17, i32 %19, i32 %20, i32 %23)
  ret void
}

declare dso_local i32 @ts_chunk_index_create_post_adjustment(i32, i32, i32, i32*, i32, i32) #1

declare dso_local i32 @chunk_index_insert(i32, i32, i32, i32) #1

declare dso_local i32 @get_rel_name(i32) #1

declare dso_local i32 @RelationGetRelid(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
